<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_upload_to_flickr"
        android:orderInCategory="1"
        android:icon="@drawable/ic_cloud_upload_white_24dp"
        android:title="@string/action_upload_to_flickr"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_archive_all"
        android:orderInCategory="2"
        android:icon="@drawable/ic_archive_white_24dp"
        android:title="@string/action_archive_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_all"
        android:orderInCategory="3"
        android:title="@string/action_select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_unselect_all"
        android:orderInCategory="4"
        android:title="@string/action_unselect_all"
        app:showAsAction="never" />

</menu>