<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_gear"
        android:orderInCategory="1"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/action_add_gear"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_select_all"
        android:orderInCategory="2"
        android:title="@string/action_select_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="3"
        android:title="@string/action_delete_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reorder"
        android:orderInCategory="4"
        android:title="@string/action_reorder"
        app:showAsAction="never" />

<!--    <item-->
<!--        android:id="@+id/action_help"-->
<!--        android:orderInCategory="5"-->
<!--        android:title="@string/action_help"-->
<!--        app:showAsAction="never" />-->

</menu>