<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SimpleNoteActivity">

    <EditText
        android:id="@+id/editTextSimpleNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonsSimpleNote"
        android:layout_alignParentTop="true"
        android:autofillHints=""
        android:background="@null"
        android:cursorVisible="true"
        android:gravity="top"
        android:hint="@string/text_hint_simple_note"
        android:inputType="textMultiLine"
        android:paddingTop="@dimen/simple_note_text_padding_top"
        android:paddingHorizontal="@dimen/simple_note_text_padding_sides"
        android:paddingBottom="@dimen/simple_note_text_padding_bottom"
        android:singleLine="false"
        android:textSize="@dimen/simple_note_font_size"
         />

    <LinearLayout
        android:id="@+id/buttonsSimpleNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSimpleNoteCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/button_font_size" />

        <Button
            android:id="@+id/buttonSimpleNoteClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_clear"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/button_font_size" />

        <Button
            android:id="@+id/buttonSimpleNoteOk"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_show"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/button_font_size" />

    </LinearLayout>
</RelativeLayout>